[tool.poetry]
name = "repl_nix_lubit"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^4.0.2"
discord = "^2.0.0"
youtube_dl = "^2021.12.17"
wavelink = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
